// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SociogramBackground /> renders ok for image 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="sociogram-background"
>
    <div
        className="sociogram-background__image"
        style={
            Object {
                "backgroundImage": "url(map.png)",
              }
        }
    />
</div>,
  "nodes": Array [
    <div
      className="sociogram-background"
>
      <div
            className="sociogram-background__image"
            style={
                  Object {
                        "backgroundImage": "url(map.png)",
                      }
            }
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SociogramBackground
        image="map.png"
        n={4}
        skewed={true}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "image": "map.png",
          "n": 4,
          "skewed": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="sociogram-background"
>
          <div
                    className="sociogram-background__image"
                    style={
                              Object {
                                        "backgroundImage": "url(map.png)",
                                      }
                    }
          />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="sociogram-background"
>
          <div
                    className="sociogram-background__image"
                    style={
                              Object {
                                        "backgroundImage": "url(map.png)",
                                      }
                    }
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SociogramBackground
    image="map.png"
    n={4}
    skewed={true}
/>,
}
`;

exports[`<SociogramBackground /> renders ok for radar 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="sociogram-background"
>
    <SociogramRadar
        n={5}
        skewed={true}
    />
</div>,
  "nodes": Array [
    <div
      className="sociogram-background"
>
      <SociogramRadar
            n={5}
            skewed={true}
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SociogramBackground
        image={null}
        n={5}
        skewed={true}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "image": null,
          "n": 5,
          "skewed": true,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="sociogram-background"
>
          <SociogramRadar
                    n={5}
                    skewed={true}
          />
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="sociogram-background"
>
          <SociogramRadar
                    n={5}
                    skewed={true}
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SociogramBackground
    image={null}
    n={5}
    skewed={true}
/>,
}
`;
